--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="page-header-image" data-parallax="true" style="background-image: url('images/cc-bg-1.jpg');"></div>
   <div class="container">
 	<div class="content-center">
-	  <div class="cc-profile-image"><a href="#"><img src="images/lwq.jpg" alt="Image"/></a></div>
+	  <div class="cc-profile-image"><a href="#"><img src="images/lwq.JPG" alt="Image"/></a></div>
 	  <div class="h2 title">李万青</div>
 	  <p class="category text-white">Java编程, Python编程, 网站设计</p>
 	</div>
